--- a/style.css
+++ b/style.css
@@ -1,8 +1,67 @@
 .nav {
     display: block;
 }
-.topNav ul {
-    display: flex;
-    justify-content: flex-end;
+.topNav {
     background-color: black;
 }
+.topNav ul{
+    display: flex;
+    justify-content: flex-end;
+
+}
+.secondNav ul{
+    display: flex;
+    justify-content: flex-end; 
+}
+.contents {
+    margin: 0 auto;
+    min-width: 10%;
+    padding: 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.jumbo h4 {
+    color: #ec5242;
+  font-size: 1.5rem;
+  margin: 0 auto;
+}
+.jumbo h1 {
+    font-family: cocogoose, sans-serif;
+    color: #ec5242;
+    font-size: 3rem;
+    line-height: 1.2;
+    margin: 0 auto;
+    margin-top: 0.5em;
+    text-align: center;
+  }
+  
+  .jumbo p {
+    color: #272a31;
+    line-height: 1.5;
+    margin: 0 auto;
+    margin-top: 2em;
+    border: 2px solid white;
+    padding: 1em;
+    width: 60%;
+    font-weight: bolder;
+    text-align: center;
+  }
+  
+  .jumbo h2 {
+    font-size: 1.5rem;
+    margin: 0 auto;
+    margin-top: 2em;
+    color: #272a31;
+    font-family: cocogoose, sans-serif;
+    text-transform: uppercase;
+  }
+  
+  .jumbo h3 {
+    margin: 0 auto;
+    margin-top: 1em;
+    color: #272a31;
+    line-height: 1.2;
+    font-size: 1.2rem;
+  }
+  
