--- a/style.css
+++ b/style.css
@@ -13,6 +13,22 @@
     display: flex;
     justify-content: flex-end; 
 }
+.nav justify-content-end {
+  list-style: none;
+}
+.active-btn {
+  color: #ec5242;
+}
+.nav-item a {
+  color: #272a31;
+}
+.btn {
+  border: 4px solid #ec5242;
+  padding: 0.5em;
+  color: #ec5242;
+  margin-left: 2em;
+}
+
 .contents {
     margin: 0 auto;
     min-width: 10%;
@@ -20,6 +36,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+.jumbo {
+  max-width: 100%; 
+  height: auto;
 }
 .jumbo h4 {
     color: #ec5242;
@@ -64,4 +84,26 @@
     line-height: 1.2;
     font-size: 1.2rem;
   }
-  
+  .side {
+    background-color: black;
+  }
+  .side h2 {
+    color: white;
+    text-align: center;
+  }
+  .hr {
+    margin-top: 10px;
+    border: 1px solid #ec5242;
+    border-radius: 5px;
+    width: 3vw;
+  }
+  .card-deck {
+    padding: 40px;
+  }
+  .card-deck img{
+    height:50px;
+    width:50px;
+}
+.card-deck ul li a {
+  text-align: center;
+}
