--- a/style.css
+++ b/style.css
@@ -98,12 +98,17 @@
     width: 3vw;
   }
   .card-deck {
-    padding: 40px;
+    padding: 30px;
   }
   .card-deck img{
-    height:50px;
-    width:50px;
+height:50px;
+width:50px;
 }
-.card-deck ul li a {
-  text-align: center;
+.col img {
+height:200px;
+width:200px;
+align-items: center;
+}
+.row {
+  padding: 50px;
 }
