--- a/style.css
+++ b/style.css
@@ -110,5 +110,95 @@ width:200px;
 align-items: center;
 }
 .row {
-  padding: 50px;
+  
 }
+.partners {
+  background-color: #272a31;
+  color: #d3d3d3;
+}
+.part-list li {
+  padding: 2em;
+  font-size: 1.2rem;
+}
+.partners .title {
+  margin: 0 auto;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.part-list {
+  display: flex;
+  margin: 0 auto;
+  flex-direction: row;
+}
+.footer {
+  display: flex;
+  justify-content: space-around;
+  padding: 2em;
+  align-items: center;
+}
+.footer-about { 
+  margin-right: 15em; 
+}
+.main-event,
+.about-event {
+  background:
+    linear-gradient(to bottom, rgba(73, 70, 70, 0.9), rgba(143, 119, 119, 0.966)),
+    url('./images/doof.jpg') no-repeat center center/cover;
+}
+.container {
+  margin: 0 auto;
+  min-width: 10%;
+  padding: 5em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.main-event h4 {
+  color: #ec5242;
+  font-size: 1.5rem;
+  margin: 0 auto;
+}
+
+.main-event h1 {
+  font-family: cocogoose, sans-serif;
+  color: #ec5242;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin: 0 auto;
+  margin-top: 0.5em;
+  text-align: center;
+}
+
+.main-event p {
+  color: #272a31;
+  line-height: 1.5;
+  margin: 0 auto;
+  margin-top: 2em;
+  border: 2px solid white;
+  padding: 1em;
+  width: 60%;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.main-event h2 {
+  font-size: 1.5rem;
+  margin: 0 auto;
+  margin-top: 2em;
+  color: #272a31;
+  font-family: cocogoose, sans-serif;
+  text-transform: uppercase;
+}
+
+.main-event h3 {
+  margin: 0 auto;
+  margin-top: 1em;
+  color: #272a31;
+  line-height: 1.2;
+  font-size: 1.2rem;
+}
+.logo-text {
+   margin-left: 0.3em; 
+  }
