updating the README file

--- a/style.css
+++ b/style.css
@@ -197,11 +197,4 @@ align-items: center;
   margin-top: 1em;
   color: #272a31;
   line-height: 1.2;
-  font-size: 1.2rem;
-}
-.logo-text {
-   margin-left: 0.3em; 
-  }
-  .container {
-    
-  }
+  font-size: 1.2rem;}
