--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-div.disabled {
-  overflow-x: hidden; 
-}
-
 .nav {
     display: block;
 }
@@ -98,19 +94,21 @@ div.disabled {
     border-radius: 5px;
     width: 3vw;
   }
+  
   .card-deck {
     padding: 10px;
-    margin-bottom: 10px;
   }
+
   .card-deck card {
     margin-bottom: 10px;
+    padding-top: 10px;
   }
   .card-deck img{
 height:50px;
 width:50px;
 }
-.col img {
-height:200px;
+.image-container {
+height:260px;
 width:200px;
 align-items: center;
 }
@@ -148,13 +146,16 @@ align-items: center;
     linear-gradient(to bottom, rgba(73, 70, 70, 0.9), rgba(143, 119, 119, 0.966)),
     url('./images/doof.jpg') no-repeat center center/cover;
 }
+
 .container {
   margin: 0 auto;
   min-width: 10%;
   padding: 5em;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+}
+.container h2 {
+  text-align: center;
 }
 
 .jumbo p {
@@ -177,6 +178,13 @@ align-items: center;
   font-size: 1.2rem;
 }
 
+.chef-image {
+  object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 992px) {
   .chef-image { min-width: 30%; }
 
@@ -197,7 +205,7 @@ align-items: center;
   .ticket-table {
   display: grid;
   grid-template-columns: 1fr;
-  margin-left: -10%;
+  
 }
 .jumbo p {
   line-height: 1;
