--- a/style.css
+++ b/style.css
@@ -22,9 +22,6 @@
   color: #ec5242;
 }
 
-.menu-btn {
-
-}
 
 #active-btn:hover{
   background-color: #272a31;
@@ -322,10 +319,10 @@ hr {
 }
 
 .chef-image {
-  object-fit: cover;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
 }
 
 .tbl {
@@ -466,6 +463,14 @@ hr {
   }
 }
 
+@media (max-width:768px){
+  .part-list{
+    flex-direction: column;
+  }
+}
+@media (screen) {
+  
+}
 .jumbo p {
   line-height: 1;
   width: 80%;
