Moving the submit button to the center

--- a/style.css
+++ b/style.css
@@ -409,11 +409,21 @@ hr {
   margin: 0 auto;
   margin-top: 2em;
   font-weight: bold;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 160%;
+  left: 45%;
 }
 
 .button:hover { background-color: #272a31; }
+
+@media (max-width:556px){
+  .button {
+    top: 395%;
+    left: 36%;
+  }
+}
 
 @media (min-width: 992px) {
   .chef-image { min-width: 30%; }
